--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -1,33 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-
-<phpunit backupGlobals="false"
-         backupStaticAttributes="false"
-         colors="true"
-         convertErrorsToExceptions="true"
-         convertNoticesToExceptions="true"
-         convertWarningsToExceptions="true"
-         processIsolation="false"
-         stopOnFailure="false"
-         syntaxCheck="false"
-         bootstrap="Tests/testkernel/autoload.php"
-         >
-    <php>
-        <server name="KERNEL_DIR" value="Tests/testkernel" />
-        <!-- <server name="VENDOR_LIB" value="/path/to/symfony/vendors/dir" /> -->
-    </php>
+<phpunit colors="true">
     <testsuites>
-        <testsuite name="AntiMattr GoogleBundle Test Suite">
-            <directory>./Tests/</directory>
+        <testsuite name="Test Suite">
+            <directory>./tests/</directory>
         </testsuite>
     </testsuites>
-
-    <filter>
-        <whitelist>
-            <directory>./</directory>
-            <exclude>
-                <directory>./Resources</directory>
-                <directory>./Tests</directory>
-            </exclude>
-        </whitelist>
-    </filter>
 </phpunit>
