Track EC::addProduct in session

--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
     "name": "antimattr/google-bundle",
     "type": "symfony-bundle",
     "description": "Google Bundle for Symfony2",
-    "keywords": ["adwords", "analytics", "ecommerce", "enhanced ecommerce", "google", "maps", "symfony"],
+    "keywords": ["adwords", "analytics", "ecommerce", "enhanced ecommerce", "google", "impression", "product", "maps", "symfony"],
     "homepage": "http://github.com/antimattr/content-mongodb-bundle",
     "license": "MIT",
     "authors": [
@@ -10,7 +10,7 @@
     ],
     "require": {
         "php": ">=5.3.0",
-        "antimattr/common-product": "dev-master"
+        "antimattr/common-product": "~1.0@stable"
     },
     "require-dev": {
         "antimattr/test-case": "~1.0@stable",
