--- a/composer.json
+++ b/composer.json
@@ -19,18 +19,29 @@
         }
     ],
     "require": {
-        "php": ">=5.6",
-        "symfony/symfony": "^2.4|^3.0"
+        "php": "^7.2",
+        "symfony/dependency-injection": "^2.8 ||^3.4 || ^4.4 || ^5.0",
+        "symfony/http-kernel": "^2.8 ||^3.4 || ^4.4 || ^5.0",
+        "symfony/config": "^2.8 ||^3.4 || ^4.4 || ^5.0"
     },
     "autoload": {
         "psr-4": {
-            "AntiMattr\\GoogleBundle\\": ""
+            "AntiMattr\\GoogleBundle\\": "src"
+        }
+    },
+    "autoload-dev": {
+        "psr-4": {
+            "AntiMattr\\GoogleBundle\\Tests\\": "tests"
         }
     },
     "scripts": {
         "test": "vendor/bin/phpunit -c ."
     },
     "require-dev": {
-        "phpunit/phpunit": "^5.7"
+        "symfony/framework-bundle": "^2.8 || ^3.4 || ^4.4 || ^5.0",
+        "symfony/twig-bundle": "^2.8 || ^3.4 || ^4.4 || ^5.0",
+        "symfony/yaml": "^2.8 || ^3.4 || ^4.4 || ^5.0",
+        "phpunit/phpunit": "^9.4",
+        "irstea/php-cs-fixer-shim": "^2.16"
     }
 }
