--- a/tests/testkernel/config/config_test.yml
+++ b/tests/testkernel/config/config_test.yml
@@ -1,13 +1,9 @@
 framework:
     secret:        notasecret
     test: ~
-    router:        { resource: "%kernel.project_dir%/config/routing_test.yml" }
-    profiler:      { only_exceptions: false }
-    validation:    { enabled: true, enable_annotations: true }
-    templating:
-        engines:        ['twig']
     session:
-        storage_id: session.storage.filesystem
+        enabled: true
+        storage_id: session.storage.mock_file
 
 google:
     analytics:
