--- a/composer.json
+++ b/composer.json
@@ -35,7 +35,8 @@
         }
     },
     "scripts": {
-        "test": "vendor/bin/phpunit -c ."
+        "test": "vendor/bin/phpunit -c .",
+        "cs": " vendor/bin/php-cs-fixer fix  --config=.php_cs.dist"
     },
     "require-dev": {
         "symfony/framework-bundle": "^2.8 || ^3.4 || ^4.4 || ^5.0",
