--- a/composer.json
+++ b/composer.json
@@ -43,7 +43,7 @@
         "symfony/twig-bundle": "^2.8 || ^3.4 || ^4.4 || ^5.0",
         "symfony/yaml": "^2.8 || ^3.4 || ^4.4 || ^5.0",
         "symfony/browser-kit": "^2.8 || ^3.4 || ^4.4 || ^5.0",
-        "phpunit/phpunit": "^9.4",
+        "phpunit/phpunit": "^8.5 || ^9.4",
         "irstea/php-cs-fixer-shim": "^2.16"
     }
 }
