--- a/composer.json
+++ b/composer.json
@@ -20,9 +20,9 @@
     ],
     "require": {
         "php": "^7.2",
-        "symfony/dependency-injection": "^2.8 ||^3.4 || ^4.4 || ^5.0",
-        "symfony/http-kernel": "^2.8 ||^3.4 || ^4.4 || ^5.0",
-        "symfony/config": "^2.8 ||^3.4 || ^4.4 || ^5.0"
+        "symfony/dependency-injection": "^3.4 || ^4.4 || ^5.0",
+        "symfony/http-kernel": "^3.4 || ^4.4 || ^5.0",
+        "symfony/config": "^3.4 || ^4.4 || ^5.0"
     },
     "autoload": {
         "psr-4": {
@@ -39,10 +39,10 @@
         "cs": " vendor/bin/php-cs-fixer fix  --config=.php_cs.dist"
     },
     "require-dev": {
-        "symfony/framework-bundle": "^2.8 || ^3.4 || ^4.4 || ^5.0",
-        "symfony/twig-bundle": "^2.8 || ^3.4 || ^4.4 || ^5.0",
-        "symfony/yaml": "^2.8 || ^3.4 || ^4.4 || ^5.0",
-        "symfony/browser-kit": "^2.8 || ^3.4 || ^4.4 || ^5.0",
+        "symfony/framework-bundle": " ^3.4 || ^4.4 || ^5.0",
+        "symfony/twig-bundle": " ^3.4 || ^4.4 || ^5.0",
+        "symfony/yaml": " ^3.4 || ^4.4 || ^5.0",
+        "symfony/browser-kit": " ^3.4 || ^4.4 || ^5.0",
         "phpunit/phpunit": "^8.5 || ^9.4",
         "irstea/php-cs-fixer-shim": "^2.16"
     }
