--- a/.travis.yml
+++ b/.travis.yml
@@ -17,8 +17,8 @@ env:
 
 install:
     - sed -i.bak "s/\^3.4 || ^4.4 || ^5.0/${deps}/" composer.json
-    - cat composer.json
     - composer --prefer-dist -n --no-progress update
 
 script:
+    - vendor/bin/php-cs-fixer fix  --config=.php_cs.dist --dry-run
     - composer test
