--- a/tests/testkernel/config/config_test.yml
+++ b/tests/testkernel/config/config_test.yml
@@ -1,3 +1,6 @@
+parameters:
+    env(GOOGLE_MAPS_API_KEY): default
+
 framework:
     secret:        notasecret
     test: ~
@@ -21,3 +24,8 @@ google:
                 id:    111111
                 label: accountCreateLabel
                 value: 0
+
+    maps:
+        config:
+            key: '%env(GOOGLE_MAPS_API_KEY)%'
+            host: 'example.com'
