Rewrite to newer symfony versions (#12)
A lot of things were made during rewrite:

*    migrate to src, tests folder
*    drop php <7.2 support (mainly due to symfony and phpunit version restrictions)
*    enable support of symfony 4.x and symfony 5.x (had to add forward-compatibility layer in tests and change container injection to service injection)
*    codestyle added
*    add test coverage for maps generation (requires api key, otherwise skips)

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,17 +7,18 @@ cache:
         - $HOME/.composer
 
 php:
-    - hhvm
-    - 5.6
-    - 7.0
-    - 7.1
+    - 7.2
+    - 7.3
+    - 7.4
 env:
-    - deps=high
-    - deps=low
+    - deps=^3.4
+    - deps=^4.4
+    - deps=^5.0
 
 install:
-    - if [ "$deps" = "high" ]; then composer --prefer-dist -n --no-progress update; fi;
-    - if [ "$deps" = "low" ]; then composer --prefer-dist -n --no-progress --prefer-lowest update; fi;
+    - sed -i.bak "s/\^3.4 || ^4.4 || ^5.0/${deps}/" composer.json
+    - composer --prefer-dist -n --no-progress update
 
 script:
+    - vendor/bin/php-cs-fixer fix  --config=.php_cs.dist --dry-run
     - composer test
