--- a/composer.json
+++ b/composer.json
@@ -19,18 +19,31 @@
         }
     ],
     "require": {
-        "php": ">=5.6",
-        "symfony/symfony": "^2.4|^3.0"
+        "php": "^7.2",
+        "symfony/dependency-injection": "^3.4 || ^4.4 || ^5.0",
+        "symfony/http-kernel": "^3.4 || ^4.4 || ^5.0",
+        "symfony/config": "^3.4 || ^4.4 || ^5.0"
     },
     "autoload": {
         "psr-4": {
-            "AntiMattr\\GoogleBundle\\": ""
+            "AntiMattr\\GoogleBundle\\": "src"
+        }
+    },
+    "autoload-dev": {
+        "psr-4": {
+            "AntiMattr\\GoogleBundle\\Tests\\": "tests"
         }
     },
     "scripts": {
-        "test": "vendor/bin/phpunit -c ."
+        "test": "vendor/bin/phpunit -c .",
+        "cs": " vendor/bin/php-cs-fixer fix  --config=.php_cs.dist"
     },
     "require-dev": {
-        "phpunit/phpunit": "^5.7"
+        "symfony/framework-bundle": " ^3.4 || ^4.4 || ^5.0",
+        "symfony/twig-bundle": " ^3.4 || ^4.4 || ^5.0",
+        "symfony/yaml": " ^3.4 || ^4.4 || ^5.0",
+        "symfony/browser-kit": " ^3.4 || ^4.4 || ^5.0",
+        "phpunit/phpunit": "^8.5 || ^9.4",
+        "irstea/php-cs-fixer-shim": "^2.16"
     }
 }
