--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -1,32 +1,33 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<phpunit backupGlobals="false"
-         backupStaticAttributes="false"
-         colors="true"
-         convertErrorsToExceptions="true"
-         convertNoticesToExceptions="true"
-         convertWarningsToExceptions="true"
-         processIsolation="false"
-         stopOnFailure="false"
-         syntaxCheck="false"
-         bootstrap="Tests/testkernel/autoload.php"
-         >
+<!-- http://www.phpunit.de/manual/current/en/appendixes.configuration.html -->
+<phpunit
+        xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+        xsi:noNamespaceSchemaLocation="https://schema.phpunit.de/9.4/phpunit.xsd"
+        backupStaticAttributes="false"
+        colors="true"
+        convertErrorsToExceptions="true"
+        convertNoticesToExceptions="true"
+        convertWarningsToExceptions="true"
+        processIsolation="false"
+        stopOnFailure="false"
+        bootstrap="tests/testkernel/autoload.php"
+>
     <php>
-        <server name="KERNEL_DIR" value="Tests/testkernel" />
-        <!-- <server name="VENDOR_LIB" value="/path/to/symfony/vendors/dir" /> -->
+        <server name="KERNEL_DIR" value="tests/testkernel"/>
+        <env name="KERNEL_CLASS" value="\AntiMattr\GoogleBundle\tests\testkernel\TestKernel" />
     </php>
     <testsuites>
         <testsuite name="AntiMattr GoogleBundle Test Suite">
-            <directory>./Tests/</directory>
+            <directory>./tests/</directory>
         </testsuite>
     </testsuites>
 
     <filter>
         <whitelist>
-            <directory>./</directory>
+            <directory>./src</directory>
             <exclude>
                 <directory>./Resources</directory>
-                <directory>./Tests</directory>
             </exclude>
         </whitelist>
     </filter>
