--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,8 @@
         }
     ],
     "require": {
-        "php": "^7.2",
+        "php": ">=7.2",
+        "twig/twig": "^2.0|^3.0",
         "symfony/dependency-injection": "^3.4 || ^4.4 || ^5.0",
         "symfony/http-kernel": "^3.4 || ^4.4 || ^5.0",
         "symfony/config": "^3.4 || ^4.4 || ^5.0"
